# aisles

./: .gitignore  README.md  mypy.ini  pyproject.toml
aisles/: fetch.py  logger.py  main.py
tests/: test_aisles.py  test_fetch.py
